--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ h2 {
 }
 h3 {
     text-align: center;
+    background-color: lavender;
+}
+h4 {
+    text-align: center;
     background-color: brown;
 }
 h6 {
@@ -23,6 +27,12 @@ body {
 
 
 p{
-    color: purple;
+    color: black;
     font-size: 20px;
+}
+
+button{
+    text-align: center;
+    display: inline;float: right;
+    font-size: 50px;
 }
