adding the reset function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,16 @@ button{
     display: inline;float: right;
     font-size: 50px;
 }
+
+.blinking{
+	animation:blinkingText 0.8s infinite;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 50px;
+}
+@keyframes blinkingText{
+    0%{     color: red;    }
+    49%{    color: transparent; }
+    50%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
