--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@ button{
     text-align: center;
     display: inline;float: right;
     font-size: 50px;
+    padding: 10px 20px;
+    font-weight: 10px;
 }
 
 .blinking{
